--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.nfc_app">
-   <application
+    <uses-permission android:name="android.permission.NFC"/>
+
+    <application
         android:label="nfc_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
